# sage

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  SIT_TESTING.md  build.sh  flash.yaml  install-local.sh  install.sh  setup-hooks.sh  sit_test.sh  watch.sh
.cargo/: config.dev.toml.example  config.toml
.config/: hakari.toml
.githooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.github/: pull_request_template.md  release-config.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: auto-release.yml  calver-release.yml  ci.yml  code-quality.yml  daily-release.yml  format.yaml  pr-title-check.yml  release.yml  update-copyright-year.yml
.zed/: debug.json  tasks.json
bins/sage-cli/: Cargo.toml
bins/sage-cli/src/: main.rs
bins/sage-cli/src/cmd/: config_edit.rs  config_get.rs  config_list.rs  config_set.rs  config_unset.rs  list.rs  log.rs  mod.rs  save.rs  share.rs  stack_adopt.rs  stack_init.rs  stack_navigate.rs  sync.rs  ui.rs  undo.rs  work.rs
bins/sage-server/: Cargo.toml
crates/sage-ai/: Cargo.toml
crates/sage-ai/src/: commit.rs  context.rs  lib.rs  ollama.rs  prompts.rs
crates/sage-config/: Cargo.toml  README.md
crates/sage-config/src/: access.rs  config.rs  defaults.rs  error.rs  lib.rs  loader.rs  manager.rs  merge.rs  model.rs  secret.rs  toml_utils.rs
crates/sage-core/: Cargo.toml
crates/sage-core/src/: events.rs  lib.rs  ui.rs
crates/sage-core/src/ai/: commit.rs  mod.rs  prompts.rs
crates/sage-core/src/cli/: mod.rs
crates/sage-core/src/gh/: mod.rs  pull_request.rs
crates/sage-core/src/helpers/: branch.rs  color.rs  mod.rs
crates/sage-core/src/steps/: commit_message.rs  fetch.rs  fuzzy_match_branch.rs  get_config.rs  list_config.rs  mod.rs  remove_config.rs  set_config.rs  stage_changes.rs
crates/sage-core/src/update/: mod.rs
crates/sage-core/src/workflows/: change_branch.old.rs  change_branch.rs  config.rs  create_branch.rs  get_repo_info.rs  list_branches.rs  log.rs  log_commits.rs  mod.rs  rebase_parent.rs  save.md  save.rs  share_branch.rs  stack_adopt.rs  stack_init.rs  stack_navigate.rs  start.rs  stash_dirty.rs  sync_branch.rs  work.rs
crates/sage-events/: Cargo.toml
crates/sage-events/src/: event.rs  lib.rs  store.rs  undo.rs
crates/sage-fmt/: Cargo.toml
crates/sage-fmt/src/: lib.rs  progress.rs  symbols.rs  theme.rs
crates/sage-git/: Cargo.toml
crates/sage-git/src/: amend.rs  branch.rs  commit.rs  config.rs  diff.rs  exec.rs  helpers.rs  hooks.rs  lib.rs  prelude.rs  rebase.rs  repo.rs  stage.rs  stash.rs  status.rs  status_test.rs  testing.rs  token.rs
crates/sage-graph/: Cargo.toml
crates/sage-graph/src/: branch.rs  graph.rs  lib.rs  persist.rs  stack.rs
crates/sage-plugin/: Cargo.toml
crates/sage-tui/: Cargo.toml
crates/sage-tui/src/: components.rs  editor.rs  error.rs  indent.rs  input.rs  lib.rs  multi_select.rs  progress.rs  select.rs  theme.rs  tree.rs
crates/sage-tui/src/basic/: check.rs  mod.rs  prompt.rs  select.rs
crates/sage-tui/src/display/: main_menu.rs  main_menu_old.rs  mod.rs
crates/sage-utils/: Cargo.toml
crates/sage-utils/examples/: defer_example.rs
crates/sage-utils/src/: defer.rs  lib.rs
docs/: CONTRIBUTING.md  GETTING_STARTED.md  RELEASE.md  RELEASE_WORKFLOW.md  USING_OLLAMA.md  USING_OPENAI.md
hack-workspace/: Cargo.toml
scripts/: analyze-commits.sh  dev-setup.sh  generate-release-notes.sh  get-latest-release.sh  install-hooks.sh  test-release-workflow.sh  validate-commits.sh
scripts/release/: test-release-workflow.sh  update-changelog.sh  utils.sh
workspace-hack/: Cargo.toml
