[workspace]
members = ["bins/*", "crates/*", "workspace-hack"]
resolver = "3"

default-members = ["bins/sage-cli"]

# ───────────────────────────────────────
# Shared dependency versions
# Any workspace crate can now say `serde = { workspace = true }`
# and it will pull the exact version declared here.
[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false }
tracing = { version = "0.1", default-features = false }
colored = "3.0"
toml = { version = "0.9", features = ["display", "parse", "serde"], default-features = false }
humantime = "2.2"
crossterm = { version = "0.29", features = ["events"], default-features = false }
workspace-hack = "0.1.0"
# ───────────────────────────────────────
# Compilation profiles
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = 0
split-debuginfo = "unpacked"
strip = "debuginfo"
