[workspace]
members = ["bin", "crates/*", "hack-workspace"]
resolver = "3"

default-members = ["bin"]

# ───────────────────────────────────────
# Shared dependency versions
# Any workspace crate can now say `serde = { workspace = true }`
# and it will pull the exact version declared here.
[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
hashbrown = { version = "0.16", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# ───────────────────────────────────────
# Compilation profiles
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = 0
split-debuginfo = "unpacked"
strip = "debuginfo"
