[package]
license = "MIT OR Apache-2.0"
name = "sage-cli"
version = "0.1.0"
edition = "2024"
description = "🌿 Sage — A Git workflow tool for managing branches and commits"
repository = "https://github.com/sage-scm/sage"
readme = "../../README.md"
keywords = ["git", "workflow", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "color"] }
owo-colors = "4.2.0"
anyhow = { workspace = true }
tokio = { version = "1.36.0", features = ["full"] }
sage-core = { path = "../../crates/sage-core" }
sage-git = { path = "../../crates/sage-git" }
sage-plugin = { version = "0.1.0", path = "../../crates/sage-plugin" }
sage-tui = { path = "../../crates/sage-tui", optional = true }
sage-config = { path = "../../crates/sage-config" }
sage-events = { path = "../../crates/sage-events" }
toml = { workspace = true }
colored = { workspace = true }
uuid = "1.6"
humantime = { workspace = true }

[features]
default = []
stack = []
ai = ["sage-core/ai"]
tui = ["dep:sage-tui"]
