[package]
license = "MIT OR Apache-2.0"
name = "sage-cli"
version = "0.1.1"
edition = "2024"
description = "🌿 Sage — A Git workflow tool for managing branches and commits"
repository = "https://github.com/sage-scm/sage"
readme = "../../README.md"
keywords = ["git", "workflow", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
anyhow = { workspace = true }
tokio = "1.36.0"
sage-core = { path = "../../crates/sage-core" }
sage-git = { path = "../../crates/sage-git" }
sage-tui = { path = "../../crates/sage-tui" }
sage-config = { path = "../../crates/sage-config" }
sage-events = { path = "../../crates/sage-events" }
toml = { workspace = true }
colored = { workspace = true }
uuid = { version = "1.6", default-features = false }
crossterm = { workspace = true }
ctrlc = "3.4.7"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
