[package]
license = "MIT OR Apache-2.0"
name = "sage-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
sage-core = { version = "0.1.0", path = "../../crates/sage-core" }
sage-git = { version = "0.1.0", path = "../../crates/sage-git" }
tokio = { version = "1.44.2", features = ["full"] }
