[package]
name = "sage-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rig-core = { version = "0.26", default-features = false, features = [
    "reqwest-rustls",
] }
hack-workspace = { version = "0.1", path = "../../hack-workspace" }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
sage-config = { version = "0.1", path = "../sage-config" }
tokio = "1.47"
once_cell = "1.19"
