[package]
name = "sage-config"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A flexible configuration library for Sage projects supporting global and local overrides."
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/sage"

[dependencies]
serde = { workspace = true, features = ["derive"] }
sage-git = { path = "../sage-git" }
toml = { workspace = true }
dirs = "6.0"
thiserror = { workspace = true }
anyhow = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile = { version = "3.6", default-features = false }
assert_fs = "1.0"
serial_test = { version = "3.2", default-features = false }
