[package]
license = "MIT OR Apache-2.0"
name = "sage-core"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = { workspace = true }
chrono = { version = "0.4.41", default-features = false }
serde = { version = "1.0.219", default-features = false }
anyhow = { workspace = true }
sage-git = { path = "../sage-git" }
sage-graph = { path = "../sage-graph" }
sage-tui = { path = "../sage-tui" }
serde_json = "1.0.140"
openai-api-rs = { version = "6.0.4", default-features = false }
indicatif = { version = "0.18", default-features = false }
fuzzy-matcher = "0.3.7"
octocrab = { version = "0.44", default-features = false, features = ["default-client", "rustls"] }
sage-config = { path = "../sage-config" }
sage-events = { path = "../sage-events" }
console = { version = "0.16", default-features = false }
thiserror.workspace = true
semver = "1.0.26"
dirs = "6.0.0"
tokio = "1.47"
terminal_size = "0.4.2"
reqwest = { version = "0.12.23", features = ["__rustls", "__rustls-ring"], default-features = false }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[target.'cfg(not(windows))'.dependencies]
openssl = "0.10"
