[package]
license = "MIT OR Apache-2.0"
name = "sage-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
colored = "3.0"
hack-workspace = { version = "0.1", path = "../../hack-workspace" }
sage-git = { version = "0.1.0", path = "../sage-git" }
sage-fmt = { version = "0.1.0", path = "../sage-fmt" }
fuzzy-matcher = "0.3"
