[package]
license = "MIT OR Apache-2.0"
name = "sage-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
colored = "3.0"
hack-workspace = { version = "0.1", path = "../../hack-workspace" }
sage-git = { version = "0.1.0", path = "../sage-git" }
sage-fmt = { version = "0.1.0", path = "../sage-fmt" }
sage-ai = { version = "0.1.0", path = "../sage-ai" }
sage-config = { version = "0.1.0", path = "../sage-config" }
sage-graph = { version = "0.1.0", path = "../sage-graph" }
fuzzy-matcher = "0.3"
dirs = "6.0"
semver = "1.0"
octocrab = "0.47"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.47", features = ["time"] }

[dev-dependencies]
sage-git = { version = "0.1.0", path = "../sage-git", features = ["testing"] }
