[package]
license = "MIT OR Apache-2.0"
name = "sage-git"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
once_cell = "1.21.3"
chrono = { workspace = true, features = ["serde"] }
hashbrown = { version = "0.15.4", features = ["serde"] }
