[package]
license = "MIT OR Apache-2.0"
name = "sage-git"
version = "0.1.0"
edition = "2024"

[features]
default = []
testing = ["dep:tempfile"]

[dependencies]
hack-workspace = { version = "0.1", path = "../../hack-workspace" }
anyhow.workspace = true
chrono.workspace = true
gix = "0.73"
gix-worktree-state = "0.20"
tempfile = { version = "3.10", optional = true }

[dev-dependencies]
tempfile = "3.10"
