[package]
name = "sage-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = {workspace = true}
anyhow = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
whoami = "1.6.0"
sage-git = { path = "../sage-git" }
hashbrown = { version = "0.15.3", features = ["serde"] }

[dev-dependencies]
tempfile = "3.19.1"
