[package]
name = "sage-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = {workspace = true}
anyhow = { workspace = true }
chrono = { workspace = true }
whoami = { version = "1.6.0", default-features = false }
sage-git = { path = "../sage-git" }
hashbrown = { version = "0.15.3", features = ["default-hasher", "serde"], default-features = false }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile = { version = "3.19.1", default-features = false }
