[package]
name = "sage-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
hashbrown.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sage-git = { version = "0.1.0", path = "../sage-git" }
hack-workspace = { version = "0.1", path = "../../hack-workspace" }

[dev-dependencies]
tempfile = "3.10"
