[package]
license = "MIT OR Apache-2.0"
name = "sage-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { workspace = true }
atty = "0.2"
strip-ansi-escapes = "0.2"
anyhow.workspace = true
tempfile = { version = "3.21.0", default-features = false }
which = "8.0.0"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
