[package]
license = "MIT OR Apache-2.0"
name = "sage-tui"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["workspace-hack"]

[dependencies]
crossterm = { workspace = true }
strip-ansi-escapes = "0.2"
anyhow.workspace = true
tempfile = { version = "3.21.0", default-features = false }
which = "8.0.0"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
